--- a/moveit-next/src/styles/components/ChallengeBox.module.css
+++ b/moveit-next/src/styles/components/ChallengeBox.module.css
@@ -94,6 +94,8 @@
 
   font-size: 1rem;
   font-weight: 600;
+
+  transition: filter 0.2s;
 }
 
 .challengeActive footer button.challengeFailedButton {
@@ -102,4 +104,8 @@
 
 .challengeActive footer button.challengeSucceededButton {
   background: var(--green);
+}
+
+.challengeActive footer button:hover {
+  filter: brightness(0.9);
 }
