Deploy - finishing project

--- a/moveit-next/src/styles/global.css
+++ b/moveit-next/src/styles/global.css
@@ -6,8 +6,8 @@
 
 /*Variable */
 :root {
-  --white: #fff;
-  --background: #f2f3f5;
+  --white: #0d1117;
+  --background: #0d1117;
   --gray-line: #dcdde0;
   --text: #666666;
   --text-highlight: #b3b9ff;
